Various code cleanup tasks

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
 
         <service
-            android:name=".PlayerAndLibraryService"
+            android:name=".McotpService"
             android:foregroundServiceType="mediaPlayback"
             android:exported="true">
             <intent-filter>
