--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.MusicPlayer"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainUI"
             android:exported="true"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/Theme.MusicPlayer">
@@ -30,7 +30,7 @@
         </activity>
 
         <service
-            android:name=".McotpService"
+            android:name=".backend.McotpService"
             android:foregroundServiceType="mediaPlayback"
             android:exported="true">
             <intent-filter>
